src/objects/Campaign_Project_Direct_Mail__c.object
<CustomObject>
    <description>created as part of ta81 for sprint #3</description>
    <fields>
        <fullName>Actual_DM_Drop_Date__c</fullName>
        <label>Actual DM Drop Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Campaign Project Direct Mail</relationshipLabel>
        <relationshipName>Campaign_Project_Direct_Mail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_setup_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event setup required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_setup_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotel setup required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_1_City__c</fullName>
        <formula>Vendor__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_1_Email__c</fullName>
        <formula>Vendor__r.Primary_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 Email </label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_1_Fax__c</fullName>
        <formula>Vendor__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_1_Phone__c</fullName>
        <formula>Vendor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_1_Street__c</fullName>
        <formula>( Vendor__r.BillingStreet )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_1_Website__c</fullName>
        <formula>Vendor__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_City__c</fullName>
        <formula>Vendor_2__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_Email__c</fullName>
        <formula>Vendor_2__r.Primary_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_Fax__c</fullName>
        <formula>Vendor_2__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_Phone__c</fullName>
        <formula>Vendor_2__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_State__c</fullName>
        <formula>Vendor_2__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_Street__c</fullName>
        <formula>Vendor_2__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_Website__c</fullName>
        <formula>Vendor_2__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2_Zip__c</fullName>
        <formula>Vendor_2__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.2 Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor.2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeName__c</field>
                <operation>contains</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Project Direct Mail (Vendor.2)</relationshipLabel>
        <relationshipName>Vendor_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Description__c</fullName>
        <label>Vendor.1  Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_State__c</fullName>
        <formula>Vendor__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Zip__c</fullName>
        <formula>Vendor__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor.1 Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor.1</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>contains</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaign Project Direct Mail</relationshipLabel>
        <relationshipName>Delivery_Scope</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Campaign Project Direct Mail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPDM-{00000}</displayFormat>
        <label>Campaign Project Direct Mail</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Direct Mail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>